# qa_model_performance

./: .gitignore  SdkHelper.h  conf_creator.py  copy_recorded_data.sh  find_recursive.py  get_pixels.py  hours_from_clickup_new.py  intersection_over_union.py  mark_duplicate_files.py  merge_frames.py  sdk_tester.cpp  zero_padding.py  zero_padding.sh
model_performance_data/: .gitignore  8_vs_16_bit_videos_v2.csv  ATR_Boats.py  ReadMe.md  features.py  intersection_over_union.py  model_performance_data_collection.py  read_8_and_16_files.py  requirements.txt  run_gui.py  run_on_dataframe.py  run_script.py  settings.toml  test.csv
model_performance_data/single_frame/: CMakeCache.txt  CMakeLists.txt  sdk_sample_raw_frames  sdk_sample_raw_frames.cpp  sdk_sample_single_frame  sdk_sample_single_frame.cpp
model_performance_data/single_frame_meerkat/: sdk_sample_single_frame.cpp
model_performance_data/single_frame_merlin/: CMakeLists.txt  sdk_sample_raw_frames  sdk_sample_raw_frames.cpp  sdk_sample_single_frame  sdk_sample_single_frame.cpp
model_performance_data/unknown_scripts/: extract_frames.py  get_data_from_csv.py  plot.py  sort_csv.py
model_performance_data/utils/: db_client.py  find_boxes_distance.py  merge_frames.py  s3_client.py  storage_connector.py
s3_folder_download/: README.md  s3_download.sh
